clusters/k3s-cluster/immich/immich-helm.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: immich
