clusters/k3s-cluster/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
  namespace: immich
  labels:
    name: immich-ingress
spec:
  rules:
    - host: photos.jacobbanghart.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: immich-server
                port:
                  number: 2283
